--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Eldin van Hengst</title>
 </head>
 <body>
     <h1>Working on it</h1>
+
 </body>
 </html>
