--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eldin van Hengst</title>
 </head>
 <body>
     <h1>Working on it</h1>
-
 </body>
 </html>
