--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta property="og:url"           content="https://profaiith.github.io/" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Student Frontend Developer" />
+    <meta property="og:description"   content="As an creative and open-minded person I am always looking for a new challenge." />
+    <meta property="og:image"         content="images/placeholder-img.png" />
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <title>Learing Frontend</title>
+    <title>Student Frontend Developer</title>
 </head>
 
 <body>
@@ -72,10 +79,11 @@
         <div class="row" >
                 <div class="col-sm"></div>
                 <div class="col-sm">
-                    <p class="center-text-paragraf" >Share on Facebook</p>
+                    <div class="fb-like" data-href="https://profaiith.github.io/" data-width="" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
                 </div>
                 <div class="col-sm">
-                <p class="center-text-paragraf">Share on Twitter</p>    
+                <p><a href="https://twitter.com/Profaiith?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Profaiith</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
+                
                 </div>
                 <div class="col-sm"></div>
 
@@ -155,9 +163,9 @@
             <div class="col-sm"data-scroll> 
                     <img src="/images/placeholder-img.png" alt="placeholder">
             </div>
+
             <div class="col-sm" style="padding-bottom: 2em;"data-scroll>
                     <img src="/images/placeholder-img.png" alt="placeholder">
-                    
             </div>
             <div class="col-sm"data-scroll> 
                     <img src="/images/placeholder-img.png" alt="placeholder">
@@ -170,7 +178,8 @@
             </div>
         </div>
     </div>
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v3.3"></script>
     <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
     <script>
         ScrollOut({
@@ -179,6 +188,7 @@
              el.classList.add("fadeInUp");
             }
          });
+
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.6/lottie_svg.min.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
